--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
+<style>
+    body {
+    min-width:250px;
+    min-height:150px;
+}
+  </style>
 <body>
-    <script src="popup.js">
-        <h1>Hello World</h1>
-    </script>
+    
+     <h1>Hello World</h1>
+     <h2>hello</h2>
     
 
 </body>
